--- a/GDSC_Springboot/2023-10-17-week1.md
+++ b/GDSC_Springboot/2023-10-17-week1.md
@@ -10,10 +10,39 @@ Spring Boot 어플리케이션의 시작을 담당하는 파일이다.
 
 <h3>Controller</h3>
 컨트롤러는 웹 애플리케이션의 요청을 처리하고 응답을 생성하는 역할을 하는 클래스이다.
-크라이언트로부터 HTTP 요청을 받아 해당 요청을 처리하고 응답을 반환한다.
+클라이언트(브라우저 또는 다른 웹 클라이언트)로부터 HTTP 요청을 받아 해당 요청을 처리하고 응답을 반환한다.
 
-컨트롤러는 특정 URL 경로에 대한 요청을 처리하기 위해 메소드에 @RequestMapping, @GetMapping, @PostMapping 등의 어노테이션을 사용하여 HTTP 메소드에 따른 요청을 처리한다.
+컨트롤러 클래스는 @Controller 어노테이션을 사용하여 표시된다.
+중요 역할은 다음과 같다.
 
+1. 요청 매핑(Request Mapping) <br>
+    컨트롤러는 @RequestMapping, @GetMapping, @PostMapping 등의 어노테이션을 사용하여 특정 URL 패턴에 대한 요청을 처리하는 메소드를 매핑한다.
+2. Parameter 처리 <br>
+    HTTP 요청과 관련된 정보나 경로 변수, 요청 매개변수들을 받아 처리한다.
+
+    ```java
+    @Controller
+    public class UserController {
+        //HTTP GET 요청이 user/{id} 경로로 들어왔을 때 이 메서드가 처리하도록 매핑
+        @GetMapping("/user/{id}")
+        public String getUser(@PathVariable Long id, Model model) {
+            // {id}는 경로 변수로, 실제 요청시 해당 부분에 들어온 값을 메서드의 @PathVariable 어노테이션이 붙은 파라미터에 매핑
+            
+            User user = userService.getUserById(id);    //userService를 통해 사용자 정보 조회
+            model.addAttribute("user", user);   //사용자 정보를 모델에 추가
+            return "userDetails";   //실질적으로 보여지는 화면 반환
+        }
+    }
+    ```
+3. 뷰 반환 <br>
+    html, json, xml 등의 형식으로 응답을 생성하고 이를 클라이언트에게 반환
+    뷰는 주로 Thymeleaf, FreeMarker, JSP등과 같은 템플릿 엔진을 사용하여 생성
+4. 비즈니스 로직 호출 <br>
+    요청에 대한 비즈니스 로직을 실해앟기 위해 서비스나 다른 컴포넌트들을 호출
+
+Controller는 단순히 요청과 응답을 처리하는 역할을 수행하도록 하고, 실제 로직은 Service나 다른 컴포넌트에 분리하여 구현하는 것이 권장된다.
+
+<br>
 이것은 추가로 작성한 MainController.class이다.
 http://localhost:8080/sbb 요청이 발생하면 /sbb URL가 매핑되는 index 메소드를 실행할 것이다.
 
@@ -34,7 +63,8 @@ public class MainController {
 ```
 
 하지만 이렇게만 작성하면 **500 에러**가 발생한다.
-요쳥에 대한 뷰 또는 데이터를 반환해야하는데, void 형태로 반환하는 경우 해당 요청을 처리하는 적절한 방법을 찾지 못하고 에러를 발생시킨다.
+요쳥에 대한 뷰 또는 데이터를 반환해야하는데, void 형태로 반환하는 경우 해당 요청을 처리하는 적절한 방법을 찾지 못해 에러가 발생하기 때문이다.
+
 **클라이언트(브라우저)로 응답을 리턴**하면 오류를 해결할 수 있다.
 
 해결방법 중 하나는 @ResponseBody 어노테이션을 사용하는 것이다.
@@ -56,14 +86,14 @@ public class MainController {
     @GetMapping("/sbb")
     @ResponseBody
     public String index() {
-        return "index";
+        return "안녕하세요 sbb에 오신것을 환영합니다!";
     }
 }
 ```
 
 이후 작동하면
 
-<img width="274" alt="image" src="https://github.com/orieasy1/2023-2-WebStudy-backend/assets/129071350/8caa086e-a274-4870-8e09-2a39860d75b1">
+
 
 이렇게 출력된다.
 
@@ -76,6 +106,8 @@ ORM을 위한 인터페이스를 제공한다.
 ORM을 사용하면 내부에서 SQL 쿼리를 자동으로 생성해준다는 장점이 있다.
 <br><br>
 H2 데이터베이스를 사용하고자한다.
+H2 데이터베이스는 순수 Java로 구현된 경량 관계형 데이터베이스 관리 시스템이다.
+서버모드와 내장모드로 실행할 수 있어 간단한 웹 애플리케이션부터 대규모 엔터프라이즈 시스템까지 다양한 환경에서 사용될 수 있다.
 
 build.gradle에 들어가서 runtimeOnly 'com.h2database:h2' 코드를 입력해 필요한 라이브러리를 설치하도록 하자.
 설치한 H2 데이터베이슬ㄹ 사용하기 위해서 application.properties 파일을 다음과 같은 내용을 입력한다.
